fix overflow

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -27,7 +27,7 @@
   body {
 	width: 100%;
 	max-width: 960px;
-	overflow: hidden;
+	overflow-x: hidden;
   }
   
   header {
